<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="88dp">

        <ImageView
            android:id="@+id/representative_image"
            android:layout_width="@dimen/representative_image_size"
            android:layout_height="@dimen/representative_image_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}"
            android:contentDescription="@string/representative_image_description" />

        <TextView
            android:id="@+id/office_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@{representative.office.name}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintLeft_toRightOf="@id/representative_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/official_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@{representative.official.name}"
            app:layout_constraintLeft_toRightOf="@id/representative_image"
            app:layout_constraintTop_toBottomOf="@id/office_name" />

        <TextView
            android:id="@+id/official_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@{representative.official.party}"
            app:layout_constraintLeft_toRightOf="@id/representative_image"
            app:layout_constraintTop_toBottomOf="@id/official_name" />


        <ImageView
            android:id="@+id/www_icon"
            android:layout_width="@dimen/social_icon_size"
            android:layout_height="@dimen/social_icon_size"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/facebook_icon"
            app:srcCompat="@drawable/ic_www"
            android:contentDescription="@string/world_wide_web_icon_description" />

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="@dimen/social_icon_size"
            android:layout_height="@dimen/social_icon_size"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/twitter_icon"
            app:srcCompat="@drawable/ic_facebook"
            android:contentDescription="@string/facebook_icon_description" />

        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="@dimen/social_icon_size"
            android:layout_height="@dimen/social_icon_size"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_twitter"
            android:contentDescription="@string/twitter_icon_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>