<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.ElectionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <TextView
            android:id="@+id/upcoming_elections_header"
            style="@style/ElectionsHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/upcoming_elections_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/no_remote_data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/saved_elections_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_elections_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/small_margin"
            android:setElectionsList="@{viewModel.elections}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/saved_elections_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upcoming_elections_header" />

        <TextView
            android:id="@+id/saved_elections_header"
            style="@style/ElectionsHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/saved_elections_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/no_local_data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_saved_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saved_elections_header" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_elections_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/small_margin"
            android:setElectionsList="@{viewModel.storedElections}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saved_elections_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>